# bulk-file-renamer

./: .gitignore  LICENSE  README.md  pyproject.toml
bulk_file_renamer/: renamer.py
src/bulk_file_renamer/: __main__.py  renamer.py
tests/: test_renamer.py
